// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Horizontal bar chart - Screen resolution Should remain unchanged on zoom in 1`] = `
<div>
  <div
    class="group/fui-horizontal-bar-chart"
  >
    <div>
      <div
        class=""
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              one
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class=""
            data-is-focusable="false"
            role="text"
          >
            1543
          </div>
        </div>
        <svg
          aria-label="one"
          class=""
        >
          <g
            aria-label="bar 1 of 3."
            id="_HorizontalLine__r_2s__0"
            role="listbox"
          >
            <rect
              aria-label="2020/04/30, 10%."
              class=""
              fill="#004b50"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <rect
              class=""
              fill="var(--color-background-overlay)"
              height="12"
              opacity="1"
              role=""
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class=""
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              two
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class=""
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class=""
        >
          <g
            aria-label="bar 2 of 3."
            id="_HorizontalLine__r_2s__1"
            role="listbox"
          >
            <rect
              aria-label="2020/04/30, 5%."
              class=""
              fill="#5c2d91"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <rect
              class=""
              fill="var(--color-background-overlay)"
              height="12"
              opacity="1"
              role=""
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class=""
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              three
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class=""
            data-is-focusable="false"
            role="text"
          >
            8888
          </div>
        </div>
        <svg
          aria-label="three"
          class=""
        >
          <g
            aria-label="bar 3 of 3."
            id="_HorizontalLine__r_2s__2"
            role="listbox"
          >
            <rect
              aria-label="2020/04/30, 59%."
              class=""
              fill="#a4262c"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <rect
              class=""
              fill="var(--color-background-overlay)"
              height="12"
              opacity="1"
              role=""
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="group/fui-chart-popover"
      id="callout_r_31_"
    />
  </div>
</div>
`;

exports[`Horizontal bar chart - Screen resolution Should remain unchanged on zoom out 1`] = `
<div>
  <div
    class="group/fui-horizontal-bar-chart"
  >
    <div>
      <div
        class=""
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              one
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class=""
            data-is-focusable="false"
            role="text"
          >
            1543
          </div>
        </div>
        <svg
          aria-label="one"
          class=""
        >
          <g
            aria-label="bar 1 of 3."
            id="_HorizontalLine__r_32__0"
            role="listbox"
          >
            <rect
              aria-label="2020/04/30, 10%."
              class=""
              fill="#004b50"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <rect
              class=""
              fill="var(--color-background-overlay)"
              height="12"
              opacity="1"
              role=""
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class=""
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              two
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class=""
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class=""
        >
          <g
            aria-label="bar 2 of 3."
            id="_HorizontalLine__r_32__1"
            role="listbox"
          >
            <rect
              aria-label="2020/04/30, 5%."
              class=""
              fill="#5c2d91"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <rect
              class=""
              fill="var(--color-background-overlay)"
              height="12"
              opacity="1"
              role=""
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class=""
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              three
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class=""
            data-is-focusable="false"
            role="text"
          >
            8888
          </div>
        </div>
        <svg
          aria-label="three"
          class=""
        >
          <g
            aria-label="bar 3 of 3."
            id="_HorizontalLine__r_32__2"
            role="listbox"
          >
            <rect
              aria-label="2020/04/30, 59%."
              class=""
              fill="#a4262c"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <rect
              class=""
              fill="var(--color-background-overlay)"
              height="12"
              opacity="1"
              role=""
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="group/fui-chart-popover"
      id="callout_r_37_"
    />
  </div>
</div>
`;

exports[`Horizontal bar chart - Theme Should reflect theme change 1`] = `
<div>
  <div
    class="group/fui-fluent-provider fui-theme-web-dark"
    dir="ltr"
  >
    <div
      class="group/fui-horizontal-bar-chart"
    >
      <div>
        <div
          class=""
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                one
              </span>
              <span
                hidden=""
              />
            </div>
            <div
              class=""
              data-is-focusable="false"
              role="text"
            >
              1543
            </div>
          </div>
          <svg
            aria-label="one"
            class=""
          >
            <g
              aria-label="bar 1 of 3."
              id="_HorizontalLine__r_38__0"
              role="listbox"
            >
              <rect
                aria-label="2020/04/30, 10%."
                class=""
                fill="#004b50"
                height="12"
                opacity="1"
                role="option"
                tabindex="0"
                width="10.286666666666665%"
                x="0%"
                y="0"
              />
              <rect
                class=""
                fill="var(--color-background-overlay)"
                height="12"
                opacity="1"
                role=""
                width="89.71333333333334%"
                x="10.286666666666665%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class=""
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                two
              </span>
              <span
                hidden=""
              />
            </div>
            <div
              class=""
              data-is-focusable="false"
              role="text"
            >
              800
            </div>
          </div>
          <svg
            aria-label="two"
            class=""
          >
            <g
              aria-label="bar 2 of 3."
              id="_HorizontalLine__r_38__1"
              role="listbox"
            >
              <rect
                aria-label="2020/04/30, 5%."
                class=""
                fill="#5c2d91"
                height="12"
                opacity="1"
                role="option"
                tabindex="0"
                width="5.333333333333334%"
                x="0%"
                y="0"
              />
              <rect
                class=""
                fill="var(--color-background-overlay)"
                height="12"
                opacity="1"
                role=""
                width="94.66666666666667%"
                x="5.333333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class=""
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                three
              </span>
              <span
                hidden=""
              />
            </div>
            <div
              class=""
              data-is-focusable="false"
              role="text"
            >
              8888
            </div>
          </div>
          <svg
            aria-label="three"
            class=""
          >
            <g
              aria-label="bar 3 of 3."
              id="_HorizontalLine__r_38__2"
              role="listbox"
            >
              <rect
                aria-label="2020/04/30, 59%."
                class=""
                fill="#a4262c"
                height="12"
                opacity="1"
                role="option"
                tabindex="0"
                width="59.25333333333334%"
                x="0%"
                y="0"
              />
              <rect
                class=""
                fill="var(--color-background-overlay)"
                height="12"
                opacity="1"
                role=""
                width="40.74666666666666%"
                x="59.25333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="group/fui-chart-popover"
        id="callout_r_3d_"
      />
    </div>
  </div>
</div>
`;

exports[`Horizontal bar chart re-rendering Should re-render the Horizontal bar chart with data 1`] = `
<div>
  <div
    aria-label="Graph has no data to display"
    id="_HBC_empty_r_3f_"
    role="alert"
    style="opacity: 0;"
  />
</div>
`;

exports[`Horizontal bar chart re-rendering Should re-render the Horizontal bar chart with data 2`] = `
<div>
  <div
    class="group/fui-horizontal-bar-chart"
    style=""
  >
    <div>
      <div
        class=""
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              one
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class=""
            data-is-focusable="false"
            role="text"
          >
            1543
          </div>
        </div>
        <svg
          aria-label="one"
          class=""
        >
          <g
            aria-label="bar 1 of 3."
            id="_HorizontalLine__r_3e__0"
            role="listbox"
          >
            <rect
              aria-label="2020/04/30, 10%."
              class=""
              fill="#004b50"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <rect
              class=""
              fill="var(--color-background-overlay)"
              height="12"
              opacity="1"
              role=""
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class=""
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              two
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class=""
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class=""
        >
          <g
            aria-label="bar 2 of 3."
            id="_HorizontalLine__r_3e__1"
            role="listbox"
          >
            <rect
              aria-label="2020/04/30, 5%."
              class=""
              fill="#5c2d91"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <rect
              class=""
              fill="var(--color-background-overlay)"
              height="12"
              opacity="1"
              role=""
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class=""
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              three
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class=""
            data-is-focusable="false"
            role="text"
          >
            8888
          </div>
        </div>
        <svg
          aria-label="three"
          class=""
        >
          <g
            aria-label="bar 3 of 3."
            id="_HorizontalLine__r_3e__2"
            role="listbox"
          >
            <rect
              aria-label="2020/04/30, 59%."
              class=""
              fill="#a4262c"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <rect
              class=""
              fill="var(--color-background-overlay)"
              height="12"
              opacity="1"
              role=""
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="group/fui-chart-popover"
      id="callout_r_3j_"
    />
  </div>
</div>
`;

exports[`Horizontal bar chart rendering Should render HorizontalBarChart for row 0 with inline legends 1`] = `
<div>
  <div
    class="group/fui-horizontal-bar-chart"
  >
    <div>
      <div
        class=""
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              one
            </span>
            <span
              hidden=""
            />
          </div>
        </div>
        <svg
          aria-label="one"
          class=""
        >
          <g
            aria-label="bar 1 of 1."
            id="_HorizontalLine__r_6__0"
            role="listbox"
          >
            <rect
              aria-label="one.one, 10/100."
              class=""
              fill="#004b50"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="10%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="one.two, 90/100."
              class=""
              fill="#a4262c"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="90%"
              x="10%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="group/fui-chart-popover"
      id="callout_r_9_"
    />
    <div
      class=""
    >
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="group/fui-legends"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
        style="justify-content: center; flex-wrap: wrap;"
      >
        <div
          class=""
          style="display: flex; flex-wrap: wrap; overflow: auto;"
        >
          <div
            class=""
          >
            <button
              aria-label="Legend 1"
              aria-posinset="1"
              aria-selected="false"
              aria-setsize="2"
              class="group/fui-button"
              data-size="small"
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #a4262c; --rect-borderColor: #a4262c;"
              type="button"
            >
              <div
                class=""
                style="height: 12px; background-color: rgb(164, 38, 44); border-color: rgb(164, 38, 44); --rect-content-high-contrast: linear-gradient(to right, #a4262c, #a4262c);"
              />
              <div
                class=""
              >
                Legend 1
              </div>
            </button>
            <div>
              <div>
                <span>
                  60
                </span>
              </div>
            </div>
          </div>
          <div
            class=""
          >
            <button
              aria-label="Legend 2"
              aria-posinset="2"
              aria-selected="false"
              aria-setsize="2"
              class="group/fui-button"
              data-size="small"
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #5c2d91; --rect-borderColor: #5c2d91;"
              type="button"
            >
              <div
                class=""
                style="height: 12px; background-color: rgb(92, 45, 145); border-color: rgb(92, 45, 145); --rect-content-high-contrast: linear-gradient(to right, #5c2d91, #5c2d91);"
              />
              <div
                class=""
              >
                Legend 2
              </div>
            </button>
            <div>
              <div>
                <span>
                  40
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Horizontal bar chart rendering Should render HorizontalBarChart for row 1 with inline legends 1`] = `
<div>
  <div
    class="group/fui-horizontal-bar-chart"
  >
    <div>
      <div
        class=""
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              two
            </span>
            <span
              hidden=""
            />
          </div>
        </div>
        <svg
          aria-label="two"
          class=""
        >
          <g
            aria-label="bar 1 of 1."
            id="_HorizontalLine__r_a__0"
            role="listbox"
          >
            <rect
              aria-label="two.one, 30/200."
              class=""
              fill="#5c2d91"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="15%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="two.two, 170/200."
              class=""
              fill="#a4262c"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="85%"
              x="15%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="group/fui-chart-popover"
      id="callout_r_d_"
    />
    <div
      class=""
    >
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="group/fui-legends"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
        style="justify-content: center; flex-wrap: wrap;"
      >
        <div
          class=""
          style="display: flex; flex-wrap: wrap; overflow: auto;"
        >
          <div
            class=""
          >
            <button
              aria-label="Legend 1"
              aria-posinset="1"
              aria-selected="false"
              aria-setsize="2"
              class="group/fui-button"
              data-size="small"
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #a4262c; --rect-borderColor: #a4262c;"
              type="button"
            >
              <div
                class=""
                style="height: 12px; background-color: rgb(164, 38, 44); border-color: rgb(164, 38, 44); --rect-content-high-contrast: linear-gradient(to right, #a4262c, #a4262c);"
              />
              <div
                class=""
              >
                Legend 1
              </div>
            </button>
            <div>
              <div>
                <span>
                  20
                </span>
              </div>
            </div>
          </div>
          <div
            class=""
          >
            <button
              aria-label="Legend 2"
              aria-posinset="2"
              aria-selected="false"
              aria-setsize="2"
              class="group/fui-button"
              data-size="small"
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #5c2d91; --rect-borderColor: #5c2d91;"
              type="button"
            >
              <div
                class=""
                style="height: 12px; background-color: rgb(92, 45, 145); border-color: rgb(92, 45, 145); --rect-content-high-contrast: linear-gradient(to right, #5c2d91, #5c2d91);"
              />
              <div
                class=""
              >
                Legend 2
              </div>
            </button>
            <div>
              <div>
                <span>
                  30
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Horizontal bar chart rendering Should render the Horizontal bar chart legend with string data 1`] = `
<div>
  <div
    class="group/fui-horizontal-bar-chart"
  >
    <div>
      <div
        class=""
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              one
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class=""
            data-is-focusable="false"
            role="text"
          >
            1543
          </div>
        </div>
        <svg
          aria-label="one"
          class=""
        >
          <g
            aria-label="bar 1 of 3."
            id="_HorizontalLine__r_0__0"
            role="listbox"
          >
            <rect
              aria-label="2020/04/30, 10%."
              class=""
              fill="#004b50"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <rect
              class=""
              fill="var(--color-background-overlay)"
              height="12"
              opacity="1"
              role=""
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class=""
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              two
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class=""
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class=""
        >
          <g
            aria-label="bar 2 of 3."
            id="_HorizontalLine__r_0__1"
            role="listbox"
          >
            <rect
              aria-label="2020/04/30, 5%."
              class=""
              fill="#5c2d91"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <rect
              class=""
              fill="var(--color-background-overlay)"
              height="12"
              opacity="1"
              role=""
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class=""
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              three
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class=""
            data-is-focusable="false"
            role="text"
          >
            8888
          </div>
        </div>
        <svg
          aria-label="three"
          class=""
        >
          <g
            aria-label="bar 3 of 3."
            id="_HorizontalLine__r_0__2"
            role="listbox"
          >
            <rect
              aria-label="2020/04/30, 59%."
              class=""
              fill="#a4262c"
              height="12"
              opacity="1"
              role="option"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <rect
              class=""
              fill="var(--color-background-overlay)"
              height="12"
              opacity="1"
              role=""
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="group/fui-chart-popover"
      id="callout_r_5_"
    />
  </div>
</div>
`;

exports[`HorizontalBarChart snapShot testing Should not render bar labels in absolute-scale variant 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    data-tabster="{\\"root\\":{}}"
  >
    <div>
      <div
        class="group/fui-horizontal-bar-chart"
      >
        <div>
          <div
            class=""
            data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
          >
            <div
              class=""
            >
              <div
                class=""
              >
                <span
                  data-is-focusable="false"
                  role="text"
                >
                  one
                </span>
                <span
                  hidden=""
                />
              </div>
            </div>
            <svg
              aria-label="one"
              class=""
            >
              <g
                aria-label="bar 1 of 3."
                id="_HorizontalLine__r_40__0"
                role="listbox"
              >
                <rect
                  aria-label="2020/04/30, 10%."
                  class=""
                  fill="#004b50"
                  height="12"
                  opacity="1"
                  role="option"
                  tabindex="0"
                  width="10.286666666666665%"
                  x="0%"
                  y="0"
                />
                <text />
              </g>
            </svg>
          </div>
        </div>
        <div>
          <div
            class=""
            data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
          >
            <div
              class=""
            >
              <div
                class=""
              >
                <span
                  data-is-focusable="false"
                  role="text"
                >
                  two
                </span>
                <span
                  hidden=""
                />
              </div>
            </div>
            <svg
              aria-label="two"
              class=""
            >
              <g
                aria-label="bar 2 of 3."
                id="_HorizontalLine__r_40__1"
                role="listbox"
              >
                <rect
                  aria-label="2020/04/30, 5%."
                  class=""
                  fill="#5c2d91"
                  height="12"
                  opacity="1"
                  role="option"
                  tabindex="0"
                  width="5.333333333333334%"
                  x="0%"
                  y="0"
                />
                <text />
              </g>
            </svg>
          </div>
        </div>
        <div>
          <div
            class=""
            data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
          >
            <div
              class=""
            >
              <div
                class=""
              >
                <span
                  data-is-focusable="false"
                  role="text"
                >
                  three
                </span>
                <span
                  hidden=""
                />
              </div>
            </div>
            <svg
              aria-label="three"
              class=""
            >
              <g
                aria-label="bar 3 of 3."
                id="_HorizontalLine__r_40__2"
                role="listbox"
              >
                <rect
                  aria-label="2020/04/30, 59%."
                  class=""
                  fill="#a4262c"
                  height="12"
                  opacity="1"
                  role="option"
                  tabindex="0"
                  width="59.25333333333334%"
                  x="0%"
                  y="0"
                />
                <text />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="group/fui-chart-popover"
          id="callout_r_45_"
        />
      </div>
    </div>
    <div
      class="group/fui-portal"
      data-portal-node="true"
      dir="ltr"
    >
      <div
        class="group/fui-tooltip"
        id="tooltip-_r_42_"
        role="tooltip"
      >
        one
      </div>
      <span
        hidden=""
      />
    </div>
    <div
      class="group/fui-portal"
      data-portal-node="true"
      dir="ltr"
    >
      <div
        class="group/fui-tooltip"
        id="tooltip-_r_43_"
        role="tooltip"
      >
        two
      </div>
      <span
        hidden=""
      />
    </div>
    <div
      class="group/fui-portal"
      data-portal-node="true"
      dir="ltr"
    >
      <div
        class="group/fui-tooltip"
        id="tooltip-_r_44_"
        role="tooltip"
      >
        three
      </div>
      <span
        hidden=""
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="group/fui-horizontal-bar-chart"
    >
      <div>
        <div
          class=""
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                one
              </span>
              <span
                hidden=""
              />
            </div>
          </div>
          <svg
            aria-label="one"
            class=""
          >
            <g
              aria-label="bar 1 of 3."
              id="_HorizontalLine__r_40__0"
              role="listbox"
            >
              <rect
                aria-label="2020/04/30, 10%."
                class=""
                fill="#004b50"
                height="12"
                opacity="1"
                role="option"
                tabindex="0"
                width="10.286666666666665%"
                x="0%"
                y="0"
              />
              <text />
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class=""
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                two
              </span>
              <span
                hidden=""
              />
            </div>
          </div>
          <svg
            aria-label="two"
            class=""
          >
            <g
              aria-label="bar 2 of 3."
              id="_HorizontalLine__r_40__1"
              role="listbox"
            >
              <rect
                aria-label="2020/04/30, 5%."
                class=""
                fill="#5c2d91"
                height="12"
                opacity="1"
                role="option"
                tabindex="0"
                width="5.333333333333334%"
                x="0%"
                y="0"
              />
              <text />
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class=""
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                three
              </span>
              <span
                hidden=""
              />
            </div>
          </div>
          <svg
            aria-label="three"
            class=""
          >
            <g
              aria-label="bar 3 of 3."
              id="_HorizontalLine__r_40__2"
              role="listbox"
            >
              <rect
                aria-label="2020/04/30, 59%."
                class=""
                fill="#a4262c"
                height="12"
                opacity="1"
                role="option"
                tabindex="0"
                width="59.25333333333334%"
                x="0%"
                y="0"
              />
              <text />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="group/fui-chart-popover"
        id="callout_r_45_"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`HorizontalBarChart snapShot testing Should render absolute-scale variant correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    data-tabster="{\\"root\\":{}}"
  >
    <div>
      <div
        class="group/fui-horizontal-bar-chart"
      >
        <div>
          <div
            class=""
            data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
          >
            <div
              class=""
            >
              <div
                class=""
              >
                <span
                  data-is-focusable="false"
                  role="text"
                >
                  one
                </span>
                <span
                  hidden=""
                />
              </div>
            </div>
            <svg
              aria-label="one"
              class=""
            >
              <g
                aria-label="bar 1 of 3."
                id="_HorizontalLine__r_3q__0"
                role="listbox"
              >
                <rect
                  aria-label="2020/04/30, 10%."
                  class=""
                  fill="#004b50"
                  height="12"
                  opacity="1"
                  role="option"
                  tabindex="0"
                  width="10.286666666666665%"
                  x="0%"
                  y="0"
                />
                <text
                  aria-hidden="true"
                  class=""
                  dominant-baseline="central"
                  transform="translate(4)"
                  x="10.286666666666665%"
                  y="6"
                >
                  1.5k
                </text>
              </g>
            </svg>
          </div>
        </div>
        <div>
          <div
            class=""
            data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
          >
            <div
              class=""
            >
              <div
                class=""
              >
                <span
                  data-is-focusable="false"
                  role="text"
                >
                  two
                </span>
                <span
                  hidden=""
                />
              </div>
            </div>
            <svg
              aria-label="two"
              class=""
            >
              <g
                aria-label="bar 2 of 3."
                id="_HorizontalLine__r_3q__1"
                role="listbox"
              >
                <rect
                  aria-label="2020/04/30, 5%."
                  class=""
                  fill="#5c2d91"
                  height="12"
                  opacity="1"
                  role="option"
                  tabindex="0"
                  width="5.333333333333334%"
                  x="0%"
                  y="0"
                />
                <text
                  aria-hidden="true"
                  class=""
                  dominant-baseline="central"
                  transform="translate(4)"
                  x="5.333333333333334%"
                  y="6"
                >
                  800
                </text>
              </g>
            </svg>
          </div>
        </div>
        <div>
          <div
            class=""
            data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
          >
            <div
              class=""
            >
              <div
                class=""
              >
                <span
                  data-is-focusable="false"
                  role="text"
                >
                  three
                </span>
                <span
                  hidden=""
                />
              </div>
            </div>
            <svg
              aria-label="three"
              class=""
            >
              <g
                aria-label="bar 3 of 3."
                id="_HorizontalLine__r_3q__2"
                role="listbox"
              >
                <rect
                  aria-label="2020/04/30, 59%."
                  class=""
                  fill="#a4262c"
                  height="12"
                  opacity="1"
                  role="option"
                  tabindex="0"
                  width="59.25333333333334%"
                  x="0%"
                  y="0"
                />
                <text
                  aria-hidden="true"
                  class=""
                  dominant-baseline="central"
                  transform="translate(4)"
                  x="59.25333333333334%"
                  y="6"
                >
                  8.9k
                </text>
              </g>
            </svg>
          </div>
        </div>
        <div
          class="group/fui-chart-popover"
          id="callout_r_3v_"
        />
      </div>
    </div>
    <div
      class="group/fui-portal"
      data-portal-node="true"
      dir="ltr"
    >
      <div
        class="group/fui-tooltip"
        id="tooltip-_r_3s_"
        role="tooltip"
      >
        one
      </div>
      <span
        hidden=""
      />
    </div>
    <div
      class="group/fui-portal"
      data-portal-node="true"
      dir="ltr"
    >
      <div
        class="group/fui-tooltip"
        id="tooltip-_r_3t_"
        role="tooltip"
      >
        two
      </div>
      <span
        hidden=""
      />
    </div>
    <div
      class="group/fui-portal"
      data-portal-node="true"
      dir="ltr"
    >
      <div
        class="group/fui-tooltip"
        id="tooltip-_r_3u_"
        role="tooltip"
      >
        three
      </div>
      <span
        hidden=""
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="group/fui-horizontal-bar-chart"
    >
      <div>
        <div
          class=""
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                one
              </span>
              <span
                hidden=""
              />
            </div>
          </div>
          <svg
            aria-label="one"
            class=""
          >
            <g
              aria-label="bar 1 of 3."
              id="_HorizontalLine__r_3q__0"
              role="listbox"
            >
              <rect
                aria-label="2020/04/30, 10%."
                class=""
                fill="#004b50"
                height="12"
                opacity="1"
                role="option"
                tabindex="0"
                width="10.286666666666665%"
                x="0%"
                y="0"
              />
              <text
                aria-hidden="true"
                class=""
                dominant-baseline="central"
                transform="translate(4)"
                x="10.286666666666665%"
                y="6"
              >
                1.5k
              </text>
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class=""
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                two
              </span>
              <span
                hidden=""
              />
            </div>
          </div>
          <svg
            aria-label="two"
            class=""
          >
            <g
              aria-label="bar 2 of 3."
              id="_HorizontalLine__r_3q__1"
              role="listbox"
            >
              <rect
                aria-label="2020/04/30, 5%."
                class=""
                fill="#5c2d91"
                height="12"
                opacity="1"
                role="option"
                tabindex="0"
                width="5.333333333333334%"
                x="0%"
                y="0"
              />
              <text
                aria-hidden="true"
                class=""
                dominant-baseline="central"
                transform="translate(4)"
                x="5.333333333333334%"
                y="6"
              >
                800
              </text>
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class=""
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                three
              </span>
              <span
                hidden=""
              />
            </div>
          </div>
          <svg
            aria-label="three"
            class=""
          >
            <g
              aria-label="bar 3 of 3."
              id="_HorizontalLine__r_3q__2"
              role="listbox"
            >
              <rect
                aria-label="2020/04/30, 59%."
                class=""
                fill="#a4262c"
                height="12"
                opacity="1"
                role="option"
                tabindex="0"
                width="59.25333333333334%"
                x="0%"
                y="0"
              />
              <text
                aria-hidden="true"
                class=""
                dominant-baseline="central"
                transform="translate(4)"
                x="59.25333333333334%"
                y="6"
              >
                8.9k
              </text>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="group/fui-chart-popover"
        id="callout_r_3v_"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
